--- a/style.css
+++ b/style.css
@@ -235,7 +235,8 @@ body p{
 .smoothie_scroll div{
     width:250px;
     /* height:250px; */
-    margin:0px 10px 20px 10px;
+    margin:0px 10px 10px 10px;
+    padding-bottom:20px;
 
     cursor: pointer;
 }
