--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   }
 
 body p{
-    font-family: 'HankenBook'; 
+    font-family: 'Comfortaa', cursive;
     font-weight: normal; 
     font-style: normal; 
 }
@@ -104,7 +104,7 @@ body p{
     padding:10px 20px;
 
     color:white;
-    font-family: 'HankenBook'; 
+    font-family: 'Comfortaa', cursive;
     font-weight: normal; 
     font-style: normal; 
 
@@ -139,7 +139,7 @@ body p{
     width:100%;
     height:80vh;
 
-    font-family: 'HankenBook'; 
+    font-family: 'Comfortaa', cursive; 
     font-weight: normal; 
     font-style: normal; 
 
@@ -594,7 +594,7 @@ button.next {
     width:100%;
     height:80vh;
 
-    font-family: 'HankenBook'; 
+    font-family: 'Comfortaa', cursive;
     font-weight: normal; 
     font-style: normal; 
 
@@ -630,7 +630,7 @@ button.next {
     width:100%;
     height:80vh;
 
-    font-family: 'HankenBook'; 
+    font-family: 'Comfortaa', cursive;
     font-weight: normal; 
     font-style: normal; 
 
